fix swagger auth annotations
